tests/miz/pass/types/pass_type_elaboration_multi_reserve_builtin_001.miz
reserve x, y for set;
reserve z for object;
