tests/miz/fail/parser/fail_parser_type_expression_missing_bracket_001.miz
import parser.type_fixtures;
reserve x for T[set, object;
